--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_translate">Translate</string>
     <string name="title_dictionary">Dictionary</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_explore">Explore</string>
     <string name="title_exercise">Exercise</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
