--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="create_account">Create account</string>
     <string name="forgot_password">Forgot password</string>
     <string name="example_full_name">John Doe</string>
+    <string name="edit_profile">Edit profile</string>
+    <string name="sign_out">Sign out</string>
 </resources>
