--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
     <string name="password">Password</string>
     <string name="confirm_password">Confirm\nPassword</string>
     <string name="login">Login</string>
-    <string name="create_account">Create account</string>
-    <string name="forgot_password">Forgot password</string>
+    <string name="create_account">Do not have an account?</string>
+    <string name="forgot_password">Forgot password?</string>
     <string name="example_full_name">John Doe</string>
     <string name="edit_profile">Edit profile</string>
     <string name="sign_out">Sign out</string>
