--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,11 @@
     <string name="sign_out">Sign out</string>
     <string name="reset_password">Reset password</string>
     <string name="ok">OK</string>
+    <string name="full_name">Full name</string>
+    <string name="gender">Gender</string>
+    <string name="level">Level</string>
+    <string name="level_example">Beginner</string>
+    <string name="occupation">Occupation</string>
+    <string name="occupation_example">Business</string>
+    <string name="log_out">Log out</string>
 </resources>
