feature: add explore community wordlist feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="cambridge_word_lists">Cambridge word lists</string>
     <string name="create">Create</string>
     <string name="welcome">Welcome</string>
+    <string name="community_word_list">Community word list</string>
 </resources>
