feature: full text search feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="create">Create</string>
     <string name="welcome">Welcome</string>
     <string name="community_word_list">Community word list</string>
+    <string name="search_result">Search Result</string>
 </resources>
