--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Dicto</string>
+    <string name="app_name">Dictioniary</string>
     <string name="title_home">Home</string>
     <string name="title_translate">Translate</string>
     <string name="title_dictionary">Dictionary</string>
